testdata/baselines/reference/submodule/conformance/jsDeclarationsFunctions.errors.txt
index.js(18,12): error TS2304: Cannot find name 'T'.
index.js(19,12): error TS2304: Cannot find name 'U'.
index.js(20,13): error TS2304: Cannot find name 'T'.
index.js(20,17): error TS2304: Cannot find name 'U'.
index.js(26,12): error TS2304: Cannot find name 'T'.


==== index.js (5 errors) ====
    export function a() {}
    
    export function b() {}
    b.cat = "cat";
    
    export function c() {}
    c.Cls = class {}
    
    /**
     * @param {number} a
     * @param {number} b
     * @return {string} 
     */
    export function d(a, b) { return /** @type {*} */(null); }
    
    /**
     * @template T,U
     * @param {T} a
               ~
!!! error TS2304: Cannot find name 'T'.
     * @param {U} b
               ~
!!! error TS2304: Cannot find name 'U'.
     * @return {T & U} 
                ~
!!! error TS2304: Cannot find name 'T'.
                    ~
!!! error TS2304: Cannot find name 'U'.
     */
    export function e(a, b) { return /** @type {*} */(null); }
    
    /**
     * @template T
     * @param {T} a
               ~
!!! error TS2304: Cannot find name 'T'.
     */
    export function f(a) {
        return a;
    }
    f.self = f;
    
    /**
     * @param {{x: string}} a
     * @param {{y: typeof b}} b
     */
    function g(a, b) {
        return a.x && b.y();
    }
    
    export { g };
    
    /**
     * @param {{x: string}} a
     * @param {{y: typeof b}} b
     */
    function hh(a, b) {
        return a.x && b.y();
    }
    
    export { hh as h };
    
    export function i() {}
    export { i as ii };
    
    export { j as jj };
    export function j() {}
    